--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,22 @@
 {
   "version": 2,
+
   "buildCommand": "pip install -r requirements.txt && python3.9 manage.py collectstatic --noinput",
+
+  "builds": [
+    {
+      "src": "Habitus/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "static"
+      }
+    }
+  ],
   "routes": [
     {
       "src": "/static/(.*)",
